fix: chromium settings + account scrollbar

--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -151,6 +151,7 @@
 
 html {
     scroll-behavior: smooth;
+    overflow: hidden;
 }
 
 :root {
